--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -114,6 +114,7 @@ $light-text: #ABB0BE;
 .item-name {
   padding-top: 10px;
   font-size: 16px;
+  //white-space: nowrap; overflow: hidden;text-overflow:ellipsis;
 }
 .item-price {
   color: $main-color;
